--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,11 +1,10 @@
 # 設定
 ## 設定CMake最低版本
-cmake_minimum_required(VERSION 3.29.0)
+cmake_minimum_required(VERSION 3.22.0)
 ## 設定專案名稱
 project(planning)
 ## 設定C++標準
 set(CMAKE_CXX_STANDARD 17)
-
 # 提供文字信息
 MESSAGE(STATUS "OS is ${CMAKE_SYSTEM}")
 
@@ -13,6 +12,8 @@ MESSAGE(STATUS "OS is ${CMAKE_SYSTEM}")
 IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
     ## 設定動態連結庫與執行檔都輸出到指定的BIN目錄下，基於Linux系統
     set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
+    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
     MESSAGE(STATUS "current platform: Linux ") 
 elseif (CMAKE_SYSTEM_NAME MATCHES "Windows")
     ## 設定動態連結庫:libcommon.dll與執行檔都輸出到指定的BIN目錄下，基於Windows系統
@@ -26,7 +27,7 @@ ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")
 
 # 動態連結庫
 ## 設定源文件路徑
-aux_source_directory(${PROJECT_SOURCE_DIR}/src. SRC_LISTS)
+aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LISTS)
 ## 生成動態連結庫:libcommon.dll
 add_library(common SHARED ${SRC_LISTS})
 ## 設定動態連結庫:libcommon.dll的頭文件路徑
